--- a/styles/main.css
+++ b/styles/main.css
@@ -58,7 +58,16 @@
 
  .location-card {
    cursor: pointer;
+   padding: 5px;
  }
+
+ .card-title {
+   clear: both;
+   width: 100%;
+   font-size: 30px;
+   border-bottom: 2px;
+ }
+
  .location-card.mdc-card {
    width: 100%;
    margin-bottom: 20px;
@@ -264,43 +273,30 @@
 
  #rating .material-icons {color: #feb22c;}
 
- #item-card .header {
-   clear: both;
-   width: 100%;
-   font-size: 30px;
- }
 
- #item-card {
-   margin-top: 100px;
- }
 
  #item-image {
-   width: 300px;
- }
- #review-card .header {
-   clear: both;
    width: 100%;
-   height: 30px;
  }
 
- #review-card .author {
+ .author {
    float: left;
    font-size: 14px;
    color: #999;
  }
 
- #review-card .rating {
+ .review-card .rating {
    float: right;
    position: relative;
    top: -10px;
  }
 
- #review-card #rating .material-icons {
+ .review-card #rating .material-icons {
    font-size: 20px;
 
  }
 
- #review-card .review {
+ .review-card .review {
    padding-bottom: 10px;
    border-bottom: 1px solid #ccc;
  }
